# flog

./: CMakeLists.txt  LICENSE
flog/: CMakeLists.txt  flog.hpp  logstream.cpp  logstream.hpp  logstream_impl.hpp
script/: helper.cmake
test/: CMakeLists.txt  main.cpp  test_logger.cpp
